--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo ES">
-<meta property="og:description" content="Name id2501_BM1_3acc">
-<meta property="og:image" content="https://img1.akspic.ru/crops/4/1/4/9/6/169414/169414-otrazhenie-legkovyye_avtomobili-toyota_supra-shina-zdanie-1920x1080.jpg">
+<meta property="og:title" content="Todas las chicas se abren de piernas">
+<meta property="og:description" content="¡Buenas noticias para todos los hombres!">
+<meta property="og:image" content="https://i.imgur.com/Ufi57a5.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
