--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="Todas las chicas se abren de piernas">
 <meta property="og:description" content="¡Buenas noticias para todos los hombres!">
-<meta property="og:image" content="https://i.imgur.com/bNgJDCG.jpg">
+<meta property="og:image" content="https://i.imgur.com/E02brAH.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
