--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo XK">
-<meta property="og:description" content="Name id2576">
-<meta property="og:image" content="https://img3.akspic.ru/crops/5/1/9/4/6/164915/164915-nissan_gt_r-nissan-legkovyye_avtomobili-sportkar-nissan_skyline-1920x1080.jpg">
+<meta property="og:title" content="Gjithë vajzat hapin këmbët">
+<meta property="og:description" content="Lajme të mira për gjithë meshkujt!">
+<meta property="og:image" content="https://i.imgur.com/iKuIy1i.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
