--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo HR">
-<meta property="og:description" content="Name id2695">
-<meta property="og:image" content="https://img1.akspic.ru/crops/0/8/5/9/6/169580/169580-legkovyye_avtomobili-mazda_rx_7-sportkar-avtosport-gonochnyj-1920x1080.jpg">
+<meta property="og:title" content="Sve cure šire noge">
+<meta property="og:description" content="Odlična vijest za sve muškarce!">
+<meta property="og:image" content="https://i.imgur.com/VomKEYD.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
