--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo BA">
-<meta property="og:description" content="Name id2719">
-<meta property="og:image" content="https://img2.akspic.ru/crops/3/3/5/7/6/167533/167533-dizajn-kapyushon-avtomobilnyj_eksterer-materialnoe_svojstvo-legkovyye_avtomobili-1920x1080.jpg">
+<meta property="og:title" content="Sve djevojke će raširiti noge">
+<meta property="og:description" content="Odlične vijesti za sve muškarce!">
+<meta property="og:image" content="https://i.imgur.com/v5G2RKX.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
