--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="Sve djevojke će raširiti noge">
 <meta property="og:description" content="Odlične vijesti za sve muškarce!">
-<meta property="og:image" content="https://i.imgur.com/v5G2RKX.jpg">
+<meta property="og:image" content="https://i.imgur.com/MNyky9O.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
