--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo RS">
-<meta property="og:description" content="Name id2757">
-<meta property="og:image" content="https://img2.akspic.ru/crops/3/2/3/6/6/166323/166323-porshe_interer-porshe-legkovyye_avtomobili-sportkar-porsche_911_gt2-1920x1080.jpg">
+<meta property="og:title" content="Sve devojke šire noge">
+<meta property="og:description" content="Odlična vest za sve muškarce!">
+<meta property="og:image" content="https://i.imgur.com/NepOmof.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
