--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="Sve devojke šire noge">
 <meta property="og:description" content="Odlična vest za sve muškarce!">
-<meta property="og:image" content="https://i.imgur.com/CX3xtlc.jpg">
+<meta property="og:image" content="https://i.imgur.com/Wa1lsjR.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
