--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo SN">
-<meta property="og:description" content="Name id2776_3">
-<meta property="og:image" content="https://img3.akspic.ru/crops/8/7/8/4/6/164878/164878-folksvagen_zhuk-legkovyye_avtomobili-folksvagen-klassicheskij_avtomobil-starinnaya_mashina-1920x1080.jpg">
+<meta property="og:title" content="Toutes les filles écartent les jambes">
+<meta property="og:description" content="Une bonne nouvelle pour tous les hommes !">
+<meta property="og:image" content="https://i.imgur.com/G5PUHI4.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
