--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Toutes les filles écartent les jambes">
-<meta property="og:description" content="Une bonne nouvelle pour tous les hommes !">
-<meta property="og:image" content="https://i.imgur.com/vLnMYpU.jpg">
+<meta property="og:title" content="Geo XK">
+<meta property="og:description" content="Name id2785">
+<meta property="og:image" content="https://img3.akspic.ru/crops/5/1/9/4/6/164915/164915-nissan_gt_r-nissan-legkovyye_avtomobili-sportkar-nissan_skyline-1920x1080.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
