--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="Gjithë vajzat hapin këmbët">
 <meta property="og:description" content="Lajme të mira për gjithë meshkujt!">
-<meta property="og:image" content="https://i.imgur.com/IoYGVpI.jpg">
+<meta property="og:image" content="https://i.imgur.com/i1gheJC.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
