--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Todas las mujeres te abrirán sus piernas">
-<meta property="og:description" content="Muy buenas noticias para los hombres!">
-<meta property="og:image" content="https://i.imgur.com/CDF1On1.jpg">
+<meta property="og:title" content="Geo HU">
+<meta property="og:description" content="Name id2817">
+<meta property="og:image" content="https://img2.akspic.ru/crops/4/9/7/4/6/164794/164794-porshe_911_klassika-porsche_930-porsche_911_gt2-porshe-legkovyye_avtomobili-1920x1080.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
