--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo PE">
-<meta property="og:description" content="Name id2826">
-<meta property="og:image" content="https://img1.akspic.ru/crops/4/2/5/4/6/164524/164524-ford_gt-chikago_avtosalon_2020-kompaniya_ford_motor-fordd-ford_gt40_na-1920x1080.jpg">
+<meta property="og:title" content="Todas las mujeres te abrirán sus piernas">
+<meta property="og:description" content="Muy buenas noticias para los hombres!">
+<meta property="og:image" content="https://i.imgur.com/2Mb2eRM.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
