--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Semua wanita akan mengangkangkan kaki mereka">
-<meta property="og:description" content="Berita gembira untuk semua pria!">
-<meta property="og:image" content="https://i.imgur.com/S06QSLw.jpg">
+<meta property="og:title" content="Geo ID">
+<meta property="og:description" content="Name id2837">
+<meta property="og:image" content="https://img2.akspic.ru/crops/5/6/0/4/6/164065/164065-svet-art-synthwave-ot_utroby_do_gibeli-proizvedenie_iskusstva-1920x1080.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
