--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="Semua wanita akan mengangkangkan kaki mereka">
 <meta property="og:description" content="Berita gembira untuk semua pria!">
-<meta property="og:image" content="https://i.imgur.com/tGkuksD.jpg">
+<meta property="og:image" content="https://i.imgur.com/2cBNgkA.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
