--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
 <meta property="og:title" content="7 दिनमै तपाईंको लिङ्ग +4 सेमी बढाउनुहोस्!!!">
-<meta property="og:description" content="Name id38VN">
-<meta property="og:image" content="शारीरिक सम्पर्कको लागि सबै युवतीहरू तयार हुन्छन्">
+<meta property="og:description" content="शारीरिक सम्पर्कको लागि सबै युवतीहरू तयार हुन्छन्">
+<meta property="og:image" content="https://img2.akspic.ru/crops/5/3/4/7/5/157435/157435-nagore-gora-oblako-legkovyye_avtomobili-rastenie-1920x1080.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
